k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openjdk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openjdk
  template:
    metadata:
      labels:
        app: openjdk
    spec:
      containers:
      - name: openjdk
        image: 773567626102.dkr.ecr.us-east-1.amazonaws.com/assignment_two:latest
        ports:
        - name: web
          containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 250m
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - general
      # tolerations:
      # - key: team
      #   operator: Equal
      #   value: devops
      #   effect: NoSchedule
