k8s/0-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customapp
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 31303
  selector:
    app: customapp
