k8s/o-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openjdk
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 31303
  selector:
    app: openjdk
