k8s/public-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: openjdk
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
