k8s/0-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customapp
spec:
  rules:
  - host: nginx-official.example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: customapp
            port:
              number: 8080
